fix line and element spacing

--- a/src/static/css/base/_typography.scss
+++ b/src/static/css/base/_typography.scss
@@ -14,7 +14,7 @@ textarea {
   font-family: _font(family);
   font-size: 18pt;
   font-weight: _font(weight);
-  line-height: 1.75;
+  line-height: 1.5625rem;
 
   @include breakpoint(xlarge) {
     font-size: 12pt;
