--- a/src/static/css/components/_section.scss
+++ b/src/static/css/components/_section.scss
@@ -19,7 +19,6 @@ header {
     font-size: 1.125rem;
     font-weight: _font(weight-heading);
     letter-spacing: _font(kerning-heading);
-    line-height: 2.5;
     margin-top: -1em;
   }
 }
